# offb_trajectory

./: CMakeLists.txt  package.xml
launch/: offb_trajectory.launch
src/: offb_trajectory.cpp  offb_trajectory_node.cpp
